--- a/3.build/hw_build_GUI/impl/pnr/hw_build_GUI.pin.html
+++ b/3.build/hw_build_GUI/impl/pnr/hw_build_GUI.pin.html
@@ -78,7 +78,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Tue Aug 20 18:30:01 2024
+<td>Tue Aug 20 18:33:59 2024
 </td>
 </tr>
 <tr>
@@ -254,10 +254,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">addr[7]</td>
 <td></td>
-<td>27/5</td>
+<td>13/6</td>
 <td>N</td>
 <td>in</td>
-<td>IOB8[A]</td>
+<td>IOL45[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -265,17 +265,17 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>1.8</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">addr[8]</td>
 <td></td>
-<td>32/5</td>
+<td>11/6</td>
 <td>N</td>
 <td>in</td>
-<td>IOB18[B]</td>
+<td>IOL29[B]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -283,17 +283,17 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>1.8</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">addr[9]</td>
 <td></td>
-<td>29/5</td>
+<td>86/0</td>
 <td>N</td>
 <td>in</td>
-<td>IOB14[A]</td>
+<td>IOT4[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -308,10 +308,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">addr[10]</td>
 <td></td>
-<td>28/5</td>
+<td>84/0</td>
 <td>N</td>
 <td>in</td>
-<td>IOB8[B]</td>
+<td>IOT6[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -326,10 +326,28 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">addr[11]</td>
 <td></td>
-<td>26/5</td>
+<td>83/0</td>
 <td>N</td>
 <td>in</td>
-<td>IOB6[B]</td>
+<td>IOT6[B]</td>
+<td>LVCMOS18</td>
+<td>NA</td>
+<td>UP</td>
+<td>ON</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">addr[12]</td>
+<td></td>
+<td>82/0</td>
+<td>N</td>
+<td>in</td>
+<td>IOT17[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -506,10 +524,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">wdat[8]</td>
 <td></td>
-<td>34/5</td>
+<td>32/5</td>
 <td>N</td>
 <td>in</td>
-<td>IOB24[B]</td>
+<td>IOB18[B]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -519,7 +537,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">wdat[9]</td>
@@ -560,10 +578,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">rdat[1]</td>
 <td></td>
-<td>86/0</td>
+<td>81/0</td>
 <td>N</td>
 <td>out</td>
-<td>IOT4[A]</td>
+<td>IOT17[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -596,10 +614,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">rdat[3]</td>
 <td></td>
-<td>31/5</td>
+<td>79/0</td>
 <td>N</td>
 <td>out</td>
-<td>IOB18[A]</td>
+<td>IOT27[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -741,15 +759,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">86/0</td>
-<td>rdat[1]</td>
-<td>out</td>
+<td>addr[9]</td>
+<td>in</td>
 <td>IOT4[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
-<td>NA</td>
-<td>OFF</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -773,7 +791,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">84/0</td>
-<td>-</td>
+<td>addr[10]</td>
 <td>in</td>
 <td>IOT6[A]</td>
 <td>LVCMOS18</td>
@@ -789,7 +807,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">83/0</td>
-<td>-</td>
+<td>addr[11]</td>
 <td>in</td>
 <td>IOT6[B]</td>
 <td>LVCMOS18</td>
@@ -805,7 +823,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">82/0</td>
-<td>-</td>
+<td>addr[12]</td>
 <td>in</td>
 <td>IOT17[A]</td>
 <td>LVCMOS18</td>
@@ -821,15 +839,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">81/0</td>
-<td>-</td>
-<td>in</td>
+<td>rdat[1]</td>
+<td>out</td>
 <td>IOT17[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
+<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -853,15 +871,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">79/0</td>
-<td>-</td>
-<td>in</td>
+<td>rdat[3]</td>
+<td>out</td>
 <td>IOT27[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
+<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1025,11 +1043,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">26/5</td>
-<td>addr[11]</td>
+<td>-</td>
 <td>in</td>
 <td>IOB6[B]</td>
 <td>LVCMOS18</td>
@@ -1041,11 +1059,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">27/5</td>
-<td>addr[7]</td>
+<td>-</td>
 <td>in</td>
 <td>IOB8[A]</td>
 <td>LVCMOS18</td>
@@ -1057,11 +1075,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">28/5</td>
-<td>addr[10]</td>
+<td>-</td>
 <td>in</td>
 <td>IOB8[B]</td>
 <td>LVCMOS18</td>
@@ -1073,11 +1091,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">29/5</td>
-<td>addr[9]</td>
+<td>-</td>
 <td>in</td>
 <td>IOB14[A]</td>
 <td>LVCMOS18</td>
@@ -1089,7 +1107,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">30/5</td>
@@ -1105,27 +1123,27 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">31/5</td>
-<td>rdat[3]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOB18[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">32/5</td>
-<td>addr[8]</td>
+<td>wdat[8]</td>
 <td>in</td>
 <td>IOB18[B]</td>
 <td>LVCMOS18</td>
@@ -1137,7 +1155,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">33/5</td>
@@ -1153,11 +1171,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">34/5</td>
-<td>wdat[8]</td>
+<td>-</td>
 <td>in</td>
 <td>IOB24[B]</td>
 <td>LVCMOS18</td>
@@ -1169,7 +1187,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">35/4</td>
@@ -1333,7 +1351,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">11/6</td>
-<td>-</td>
+<td>addr[8]</td>
 <td>in</td>
 <td>IOL29[B]</td>
 <td>LVCMOS18</td>
@@ -1343,13 +1361,13 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>3.3</td>
 </tr>
 <tr>
 <td class="label">13/6</td>
-<td>-</td>
+<td>addr[7]</td>
 <td>in</td>
 <td>IOL45[A]</td>
 <td>LVCMOS18</td>
@@ -1359,7 +1377,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>3.3</td>
 </tr>
