--- a/3.build/hw_build_GUI/impl/pnr/hw_build_GUI.rpt.html
+++ b/3.build/hw_build_GUI/impl/pnr/hw_build_GUI.rpt.html
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Tue Aug 20 18:30:01 2024
+<td>Tue Aug 20 18:33:59 2024
 </td>
 </tr>
 <tr>
@@ -97,12 +97,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.604s, Elapsed time = 0h 0m 0.604s
-   Placement Phase 1: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
-   Placement Phase 2: CPU time = 0h 0m 6s, Elapsed time = 0h 0m 6s
+   Placement Phase 0: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
+   Placement Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
+   Placement Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
    Placement Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
    Placer Process stopped by user
-   Total Placement: CPU time = 0h 0m 9s, Elapsed time = 0h 0m 9s
+   Total Placement: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
 Running routing:
    ---
 Generate output files:
@@ -111,7 +111,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 9s, Elapsed time = 0h 0m 9s, Peak memory usage = 826MB</td>
+<td>CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 826MB</td>
 </tr>
 </table>
 <br/>
@@ -126,12 +126,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>9324/20736</td>
-<td>45%</td>
+<td>15058/20736</td>
+<td>73%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>5436(5436 LUT, 0 ALU, 0 ROM16)</td>
+<td>11170(11170 LUT, 0 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
@@ -141,8 +141,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>6400/15750</td>
-<td>41%</td>
+<td>15680/15750</td>
+<td>100%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as Latch</td>
@@ -151,8 +151,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>6400/15552</td>
-<td>42%</td>
+<td>15680/15552</td>
+<td>101%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --I/O Register as Latch</td>
@@ -166,22 +166,22 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>8313/10368</td>
-<td>81%</td>
+<td>0/10368</td>
+<td>0%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
-<td>34</td>
+<td>35</td>
 <td>-</td>
 </tr>
 <tr>
 <td class="label">I/O Buf</td>
-<td>34</td>
+<td>35</td>
 <td>-</td>
 </tr>
 <tr>
 <td class="label"> &nbsp &nbsp --Input Buf</td>
-<td>24</td>
+<td>25</td>
 <td>-</td>
 </tr>
 <tr>
@@ -456,10 +456,10 @@ Generate output files:
 <tr>
 <td class="label">addr[7]</td>
 <td></td>
-<td>27/5</td>
+<td>13/6</td>
 <td>N</td>
 <td>in</td>
-<td>IOB8[A]</td>
+<td>IOL45[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -467,17 +467,17 @@ Generate output files:
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>1.8</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">addr[8]</td>
 <td></td>
-<td>32/5</td>
+<td>11/6</td>
 <td>N</td>
 <td>in</td>
-<td>IOB18[B]</td>
+<td>IOL29[B]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -485,17 +485,17 @@ Generate output files:
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>1.8</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">addr[9]</td>
 <td></td>
-<td>29/5</td>
+<td>86/0</td>
 <td>N</td>
 <td>in</td>
-<td>IOB14[A]</td>
+<td>IOT4[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -510,10 +510,10 @@ Generate output files:
 <tr>
 <td class="label">addr[10]</td>
 <td></td>
-<td>28/5</td>
+<td>84/0</td>
 <td>N</td>
 <td>in</td>
-<td>IOB8[B]</td>
+<td>IOT6[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -528,10 +528,28 @@ Generate output files:
 <tr>
 <td class="label">addr[11]</td>
 <td></td>
-<td>26/5</td>
+<td>83/0</td>
 <td>N</td>
 <td>in</td>
-<td>IOB6[B]</td>
+<td>IOT6[B]</td>
+<td>LVCMOS18</td>
+<td>NA</td>
+<td>UP</td>
+<td>ON</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">addr[12]</td>
+<td></td>
+<td>82/0</td>
+<td>N</td>
+<td>in</td>
+<td>IOT17[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -708,10 +726,10 @@ Generate output files:
 <tr>
 <td class="label">wdat[8]</td>
 <td></td>
-<td>34/5</td>
+<td>32/5</td>
 <td>N</td>
 <td>in</td>
-<td>IOB24[B]</td>
+<td>IOB18[B]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -721,7 +739,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">wdat[9]</td>
@@ -762,10 +780,10 @@ Generate output files:
 <tr>
 <td class="label">rdat[1]</td>
 <td></td>
-<td>86/0</td>
+<td>81/0</td>
 <td>N</td>
 <td>out</td>
-<td>IOT4[A]</td>
+<td>IOT17[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -798,10 +816,10 @@ Generate output files:
 <tr>
 <td class="label">rdat[3]</td>
 <td></td>
-<td>31/5</td>
+<td>79/0</td>
 <td>N</td>
 <td>out</td>
-<td>IOB18[A]</td>
+<td>IOT27[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -943,15 +961,15 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">86/0</td>
-<td>rdat[1]</td>
-<td>out</td>
+<td>addr[9]</td>
+<td>in</td>
 <td>IOT4[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
-<td>NA</td>
-<td>OFF</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -975,7 +993,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">84/0</td>
-<td>-</td>
+<td>addr[10]</td>
 <td>in</td>
 <td>IOT6[A]</td>
 <td>LVCMOS18</td>
@@ -991,7 +1009,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">83/0</td>
-<td>-</td>
+<td>addr[11]</td>
 <td>in</td>
 <td>IOT6[B]</td>
 <td>LVCMOS18</td>
@@ -1007,7 +1025,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">82/0</td>
-<td>-</td>
+<td>addr[12]</td>
 <td>in</td>
 <td>IOT17[A]</td>
 <td>LVCMOS18</td>
@@ -1023,15 +1041,15 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">81/0</td>
-<td>-</td>
-<td>in</td>
+<td>rdat[1]</td>
+<td>out</td>
 <td>IOT17[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
+<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1055,15 +1073,15 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">79/0</td>
-<td>-</td>
-<td>in</td>
+<td>rdat[3]</td>
+<td>out</td>
 <td>IOT27[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
+<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1227,11 +1245,11 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">26/5</td>
-<td>addr[11]</td>
+<td>-</td>
 <td>in</td>
 <td>IOB6[B]</td>
 <td>LVCMOS18</td>
@@ -1243,11 +1261,11 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">27/5</td>
-<td>addr[7]</td>
+<td>-</td>
 <td>in</td>
 <td>IOB8[A]</td>
 <td>LVCMOS18</td>
@@ -1259,11 +1277,11 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">28/5</td>
-<td>addr[10]</td>
+<td>-</td>
 <td>in</td>
 <td>IOB8[B]</td>
 <td>LVCMOS18</td>
@@ -1275,11 +1293,11 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">29/5</td>
-<td>addr[9]</td>
+<td>-</td>
 <td>in</td>
 <td>IOB14[A]</td>
 <td>LVCMOS18</td>
@@ -1291,7 +1309,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">30/5</td>
@@ -1307,27 +1325,27 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">31/5</td>
-<td>rdat[3]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOB18[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">32/5</td>
-<td>addr[8]</td>
+<td>wdat[8]</td>
 <td>in</td>
 <td>IOB18[B]</td>
 <td>LVCMOS18</td>
@@ -1339,7 +1357,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">33/5</td>
@@ -1355,11 +1373,11 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">34/5</td>
-<td>wdat[8]</td>
+<td>-</td>
 <td>in</td>
 <td>IOB24[B]</td>
 <td>LVCMOS18</td>
@@ -1371,7 +1389,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>1.8</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">35/4</td>
@@ -1535,7 +1553,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">11/6</td>
-<td>-</td>
+<td>addr[8]</td>
 <td>in</td>
 <td>IOL29[B]</td>
 <td>LVCMOS18</td>
@@ -1545,13 +1563,13 @@ Generate output files:
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>3.3</td>
 </tr>
 <tr>
 <td class="label">13/6</td>
-<td>-</td>
+<td>addr[7]</td>
 <td>in</td>
 <td>IOL45[A]</td>
 <td>LVCMOS18</td>
@@ -1561,7 +1579,7 @@ Generate output files:
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>3.3</td>
 </tr>
