--- a/3.build/hw_build_GUI/impl/pnr/hw_build_GUI.pin.html
+++ b/3.build/hw_build_GUI/impl/pnr/hw_build_GUI.pin.html
@@ -78,7 +78,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Wed Aug 21 16:23:25 2024
+<td>Thu Aug 22 17:03:27 2024
 </td>
 </tr>
 <tr>
@@ -290,42 +290,6 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">addr[9]</td>
 <td></td>
-<td>32/5</td>
-<td>N</td>
-<td>in</td>
-<td>IOB18[B]</td>
-<td>LVCMOS18</td>
-<td>NA</td>
-<td>UP</td>
-<td>ON</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">addr[10]</td>
-<td></td>
-<td>11/6</td>
-<td>N</td>
-<td>in</td>
-<td>IOL29[B]</td>
-<td>LVCMOS18</td>
-<td>NA</td>
-<td>UP</td>
-<td>ON</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">addr[11]</td>
-<td></td>
 <td>13/6</td>
 <td>N</td>
 <td>in</td>
@@ -342,7 +306,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>3.3</td>
 </tr>
 <tr>
-<td class="label">addr[12]</td>
+<td class="label">addr[10]</td>
 <td></td>
 <td>10/6</td>
 <td>N</td>
@@ -356,6 +320,42 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>OFF</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">addr[11]</td>
+<td></td>
+<td>72/1</td>
+<td>N</td>
+<td>in</td>
+<td>IOT40[B]</td>
+<td>LVCMOS18</td>
+<td>NA</td>
+<td>UP</td>
+<td>ON</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">addr[12]</td>
+<td></td>
+<td>71/1</td>
+<td>N</td>
+<td>in</td>
+<td>IOT44[A]</td>
+<td>LVCMOS18</td>
+<td>NA</td>
+<td>UP</td>
+<td>ON</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
 <td>NA</td>
 <td>3.3</td>
 </tr>
@@ -967,7 +967,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">72/1</td>
-<td>-</td>
+<td>addr[11]</td>
 <td>in</td>
 <td>IOT40[B]</td>
 <td>LVCMOS18</td>
@@ -983,7 +983,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">71/1</td>
-<td>-</td>
+<td>addr[12]</td>
 <td>in</td>
 <td>IOT44[A]</td>
 <td>LVCMOS18</td>
@@ -1143,7 +1143,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">32/5</td>
-<td>addr[9]</td>
+<td>-</td>
 <td>in</td>
 <td>IOB18[B]</td>
 <td>LVCMOS18</td>
@@ -1335,7 +1335,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">10/6</td>
-<td>addr[12]</td>
+<td>addr[10]</td>
 <td>in</td>
 <td>IOL29[A]</td>
 <td>LVCMOS18</td>
@@ -1351,7 +1351,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">11/6</td>
-<td>addr[10]</td>
+<td>-</td>
 <td>in</td>
 <td>IOL29[B]</td>
 <td>LVCMOS18</td>
@@ -1361,13 +1361,13 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
 <td>NA</td>
 <td>3.3</td>
 </tr>
 <tr>
 <td class="label">13/6</td>
-<td>addr[11]</td>
+<td>addr[9]</td>
 <td>in</td>
 <td>IOL45[A]</td>
 <td>LVCMOS18</td>
